Prevent vertical scrollbar when tost in and out.

--- a/src/client/app/layout/default.css
+++ b/src/client/app/layout/default.css
@@ -1,5 +1,6 @@
 body {
     font-family: "Arimo", serif;
+    overflow-y: hidden;
 }
 
 .tabpanel-container {
